# ocaml-exercises

./: dune-project
lib/: chapter_2.ml  chapter_3.ml
test/: dune
